--- a/recurrent-neural-networks/char-rnn/Character_Level_RNN_Exercise.ipynb
+++ b/recurrent-neural-networks/char-rnn/Character_Level_RNN_Exercise.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,21 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([54,  7, 20, 67, 62, 57, 44, 56, 59, 11, 11, 11, 36, 20, 67, 67, 12,\n",
-       "       56, 55, 20, 38, 34, 74, 34, 57, 78, 56, 20, 44, 57, 56, 20, 74, 74,\n",
-       "       56, 20, 74, 34, 24, 57, 17, 56, 57, 19, 57, 44, 12, 56, 42, 35,  7,\n",
-       "       20, 67, 67, 12, 56, 55, 20, 38, 34, 74, 12, 56, 34, 78, 56, 42, 35,\n",
-       "        7, 20, 67, 67, 12, 56, 34, 35, 56, 34, 62, 78, 56,  8, 31, 35, 11,\n",
-       "       31, 20, 12, 49, 11, 11, 63, 19, 57, 44, 12, 62,  7, 34, 35])"
+       "array([49, 69, 67, 45,  1, 31, 71, 32, 42, 78, 78, 78, 34, 67, 45, 45, 36,\n",
+       "       32, 46, 67, 72, 40,  6, 40, 31, 10, 32, 67, 71, 31, 32, 67,  6,  6,\n",
+       "       32, 67,  6, 40, 47, 31, 37, 32, 31, 54, 31, 71, 36, 32, 25, 14, 69,\n",
+       "       67, 45, 45, 36, 32, 46, 67, 72, 40,  6, 36, 32, 40, 10, 32, 25, 14,\n",
+       "       69, 67, 45, 45, 36, 32, 40, 14, 32, 40,  1, 10, 32, 30, 82, 14, 78,\n",
+       "       82, 67, 36, 26, 78, 78, 50, 54, 31, 71, 36,  1, 69, 40, 14])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,16 +256,40 @@
     "    ## TODO: Reshape into batch_size rows\n",
     "    arr = arr.reshape((batch_size, -1)) # Batch_Size is the number of rows (sequences/batch), -1 is a placeholder\n",
     "    # The dimensions will end up being batch_size x (n_batches*seq_length) \n",
+    "    # So at this point it is bach_size tall, but really really wide.\n",
     "    \n",
     "    ## TODO: Iterate over the batches using a window of size seq_length\n",
     "    for n in range(0, arr.shape[1], seq_length): #Starts at 0, stops at number of cols in arr, moves by seq_length\n",
     "        # The features\n",
     "        x = arr[:,n:n+seq_length]\n",
+    "        # hold on, how come this doesn't just over-write x with every loop?\n",
+    "        # the key to this seems to be to understand the \"yield\" statement used in this loop, what's that?\n",
+    "        \n",
     "        # The targets, shifted by one  #note that python can't deal with indices > len(arr)\n",
     "        y = np.zeros_like(x)\n",
     "        \n",
-    "        y = arr[:,n+1:n+seq_length+1]\n",
-    "        yield x, y"
+    "        #my attempt here: \n",
+    "        if (n < arr.shape(1)):   # Restricting n to values that have an index in the array.\n",
+    "            y  = arr[:,n+1:n+seq_length+1]\n",
+    "        else:\n",
+    "            pass  # Need to put something here.\n",
+    "        \n",
+    "        yield x, y\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        # The worked solution for the last bit:\n",
+    "        # x = arr[:,n:n+seq_length]\n",
+    "        # y = np.zeros_like(x)  # makes an array of zeros the required size\n",
+    "        # try:\n",
+    "        #   y[:, :-1], y[:, -1] = x[:, 1:], arr[:, n+seq_length]  # See below\n",
+    "        #   The first component is to fill every row up to (not including) the last col. of y, = x row shifted one\n",
+    "        #   The second component fills just the last col in every row with the first item in the next sequence \n",
+    "        #   There is something I don't get here: why does it over-write only part of the array with each loop?\n",
+    "        # except IndexError:\n",
+    "        #   y[:, :-1], y[:, -1] = x[:, 1:], arr[:, 0]  # See below\n",
+    "        #   This is the same, except that where the index would be out of range, we specify 0 (the first entry)\n",
+    "        # yield x, y"
    ]
   },
   {
