--- a/recurrent-neural-networks/char-rnn/Character_Level_RNN_Exercise.ipynb
+++ b/recurrent-neural-networks/char-rnn/Character_Level_RNN_Exercise.ipynb
@@ -262,17 +262,22 @@
     "    for n in range(0, arr.shape[1], seq_length): #Starts at 0, stops at number of cols in arr, moves by seq_length\n",
     "        # The features\n",
     "        x = arr[:,n:n+seq_length]\n",
-    "        # hold on, how come this doesn't just over-write x with every loop?\n",
-    "        # the key to this seems to be to understand the \"yield\" statement used in this loop, what's that?\n",
+    "        \n",
+    "        # Hold on, how come this doesn't just over-write x with every loop?\n",
+    "        # Answer: it does, the key to this seems to be to understand the \"yield\" statement used in this loop, \n",
+    "        # This isn't a normal funtion, it is a \"generator\", it keeps it's current state in memory\n",
+    "        # n, batch_size, seq_length, n_batches, arr, x, y,\n",
+    "        # and 'yields' only the bit we need.  In this case the single batch.\n",
+    "        # The bach will be a 2d array batch_size tall x seq_length wide.\n",
     "        \n",
     "        # The targets, shifted by one  #note that python can't deal with indices > len(arr)\n",
     "        y = np.zeros_like(x)\n",
     "        \n",
     "        #my attempt here: \n",
     "        if (n < arr.shape(1)):   # Restricting n to values that have an index in the array.\n",
-    "            y  = arr[:,n+1:n+seq_length+1]\n",
+    "            y  = arr[:,n+1:n+seq_length+1]  # slices arr one on from x\n",
     "        else:\n",
-    "            pass  # Need to put something here.\n",
+    "            y  = arr[:,0]  fills up the last column\n",
     "        \n",
     "        yield x, y\n",
     "        \n",
@@ -289,7 +294,8 @@
     "        # except IndexError:\n",
     "        #   y[:, :-1], y[:, -1] = x[:, 1:], arr[:, 0]  # See below\n",
     "        #   This is the same, except that where the index would be out of range, we specify 0 (the first entry)\n",
-    "        # yield x, y"
+    "        # yield x, y\n",
+    "        #  Maybe this is a better solution, since it is mainly copying part of x, without an addition process."
    ]
   },
   {
