Updated markdown image link format

--- a/convolutional-neural-networks/conv-visualization/conv_visualization.ipynb
+++ b/convolutional-neural-networks/conv-visualization/conv_visualization.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "In this example, *we* are defining four filters that are applied to an input image by initializing the **weights** of a convolutional layer, but a trained CNN will learn the values of these weights.\n",
     "\n",
-    "<img src='notebook_ims/conv_layer.gif' height=60% width=60% />"
+    "<img src='notebook_ims/conv_layer.gif' height="60%" width="60%" />"
    ]
   },
   {
