--- a/convolutional-neural-networks/conv-visualization/maxpooling_visualization.ipynb
+++ b/convolutional-neural-networks/conv-visualization/maxpooling_visualization.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "A convolutional layer + activation function, followed by a pooling layer, and a linear layer (to create a desired output size) make up the basic layers of a CNN.\n",
     "\n",
-    "<img src='notebook_ims/CNN_all_layers.png' height=50% width=50% />"
+    "<img src='notebook_ims/CNN_all_layers.png' height="50%" width="50%" />"
    ]
   },
   {
@@ -333,35 +333,4 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "anaconda-cloud": {},
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.2"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
-}
+   "metadata": {
