--- a/convolutional-neural-networks/cifar-cnn/completed_cifar10_cnn_augmentation.ipynb
+++ b/convolutional-neural-networks/cifar-cnn/completed_cifar10_cnn_augmentation.ipynb
@@ -299,7 +299,7 @@
         "---\n",
         "This notebook was the same as the previous one for Cifar10, but with some input data augmentation.  I have modified the network to use the same architecture as the one I used last time for comparison.\n",
         "\n",
-        "<img src='https://github.com/Wologman/Udacity_Pytorch/blob/master/convolutional-neural-networks/cifar-cnn/notebook_ims/cifar_data.png?raw=1' width=70% height=70% />"
+        "<img src='https://github.com/Wologman/Udacity_Pytorch/blob/master/convolutional-neural-networks/cifar-cnn/notebook_ims/cifar_data.png?raw=1' width=\"70%\" height=\"70%\" />"
       ]
     },
     {
@@ -337,7 +337,7 @@
         "else:\n",
         "    print('CUDA is available!  Training on GPU ...')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +439,7 @@
         "classes = ['airplane', 'automobile', 'bird', 'cat', 'deer',\n",
         "           'dog', 'frog', 'horse', 'ship', 'truck']"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +504,7 @@
         "    img = img / 2 + 0.5  # unnormalize\n",
         "    plt.imshow(np.transpose(img, (1, 2, 0)))  # convert from Tensor image"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,7 +540,7 @@
         "    imshow(images[idx])\n",
         "    ax.set_title(classes[labels[idx]])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -599,7 +599,7 @@
         "                    verticalalignment='center', size=8,\n",
         "                    color='white' if img[x][y]<thresh else 'black')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -633,7 +633,7 @@
         "\n",
         "A network with 2 convolutional layers is shown in the image below and in the code, and you've been given starter code with one convolutional and one maxpooling layer.\n",
         "\n",
-        "<img src='https://github.com/Wologman/Udacity_Pytorch/blob/master/convolutional-neural-networks/cifar-cnn/notebook_ims/2_layer_conv.png?raw=1' height=50% width=50% />\n",
+        "<img src='https://github.com/Wologman/Udacity_Pytorch/blob/master/convolutional-neural-networks/cifar-cnn/notebook_ims/2_layer_conv.png?raw=1' height=\"50%\" width=\"50%\" />\n",
         "\n",
         "#### TODO: Define a model with multiple convolutional layers, and define the feedforward metwork behavior.\n",
         "\n",
@@ -707,7 +707,7 @@
         "if train_on_gpu:\n",
         "    model.cuda()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,7 +758,7 @@
         "optimizer = optim.SGD(model.parameters(), lr=0.005, momentum = 0.9)\n",
         "# With lr= 0.001 I got overall accuracy 64%"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -849,7 +849,7 @@
         "        torch.save(model.state_dict(), 'model_augmented.pt')\n",
         "        valid_loss_min = valid_loss"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -910,7 +910,7 @@
       "source": [
         "model.load_state_dict(torch.load('model_augmented.pt'))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -995,7 +995,7 @@
         "    100. * np.sum(class_correct) / np.sum(class_total),\n",
         "    np.sum(class_correct), np.sum(class_total)))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,7 +1064,7 @@
         "    ax.set_title(\"{} ({})\".format(classes[preds[idx]], classes[labels[idx]]),\n",
         "                 color=(\"green\" if preds[idx]==labels[idx].item() else \"red\"))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1090,7 +1090,7 @@
       "source": [
         ""
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     }
   ]
